# opencv_miscellanea

./: main2.py  pyproject.toml  saving_images_from_camera.py
scripts/: 1_simple_ip_feed.py  2_movement_detection_Frame_Differencing.py  3_movement_detection_BackgroundSubtractor.py  4_face_detection_CascadeClassifier.py  saving_images_from_video_file.py
